--- a/Randomizer/Storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/Randomizer/Storyboards/Base.lproj/LaunchScreen.storyboard
@@ -16,40 +16,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Sign" translatesAutoresizingMaskIntoConstraints="NO" id="d3a-EG-Fc2">
-                                <rect key="frame" x="82" y="305" width="211" height="105"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sign" translatesAutoresizingMaskIntoConstraints="NO" id="lg4-Kt-bj1">
+                                <rect key="frame" x="0.0" y="44" width="375" height="523"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Box" translatesAutoresizingMaskIntoConstraints="NO" id="RF0-Qy-zSl">
-                                <rect key="frame" x="82" y="418" width="211" height="90"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Box" translatesAutoresizingMaskIntoConstraints="NO" id="13J-c0-7VM">
+                                <rect key="frame" x="0.0" y="567" width="375" height="211"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="211" id="vTS-jt-ja3"/>
+                                </constraints>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="KW7-lq-hqO">
-                                <rect key="frame" x="82" y="252" width="211" height="30"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ran" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Api-yg-w7H">
-                                        <rect key="frame" x="0.0" y="0.0" width="70.333333333333329" height="30"/>
-                                        <fontDescription key="fontDescription" name="Rockwell-Bold" family="Rockwell" pointSize="30"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dom" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0oJ-0d-dp4">
-                                        <rect key="frame" x="70.333333333333343" y="0.0" width="70.333333333333343" height="30"/>
-                                        <fontDescription key="fontDescription" name="Rockwell-Bold" family="Rockwell" pointSize="30"/>
-                                        <color key="textColor" red="0.58072251080000004" green="0.0" blue="0.30804857813930819" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="izer" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kiu-6g-WkG">
-                                        <rect key="frame" x="140.66666666666666" y="0.0" width="70.333333333333343" height="30"/>
-                                        <fontDescription key="fontDescription" name="Rockwell-Bold" family="Rockwell" pointSize="30"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" red="0.91069067764651024" green="0.93322488259128822" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="13J-c0-7VM" firstAttribute="top" secondItem="lg4-Kt-bj1" secondAttribute="bottom" id="5oH-Rp-CxI"/>
+                            <constraint firstItem="lg4-Kt-bj1" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="F89-Ro-1av"/>
+                            <constraint firstItem="13J-c0-7VM" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="cwq-rZ-YrA"/>
+                            <constraint firstItem="lg4-Kt-bj1" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="kQ5-KL-xML"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="13J-c0-7VM" secondAttribute="bottom" id="o32-hs-Wvu"/>
+                            <constraint firstItem="lg4-Kt-bj1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="pKX-Wf-Kzw"/>
+                            <constraint firstItem="13J-c0-7VM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="vcd-2T-5Ac"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
